# janus

./: CMakeLists.txt  README.md
include/: iarpa_janus.h  iarpa_janus_io.h
scripts/: run_search.sh  run_verification.sh
scripts/testdir/: enroll.csv  train.csv
scripts/testdir/search/: probes.csv
scripts/testdir/verification/: verif_pairs.csv
src/: CMakeLists.txt  janus_io.cpp
src/opencv_io/: opencv_io.cpp
src/utils/: CMakeLists.txt  janus_cluster.cpp  janus_create_gallery.cpp  janus_create_templates.cpp  janus_create_templates2.cpp  janus_create_templates_parallel.cpp  janus_detect.cpp  janus_search.cpp  janus_verify.cpp
